feat: small mortgage page updates

--- a/mortgage.html
+++ b/mortgage.html
@@ -103,6 +103,17 @@
     </header>
 
     <main class="h-full">
+      <!-- Calculator section -->
+      <!-- <section>
+        <h1 class="font-secondary">
+          Simulador de <span class="text-purple-500">Financiamento Imobiliário</span>
+        </h1>
+
+        <div class="h-screen grid content-center">
+          <a href="#" class="btn btn-gradient">Solicitar Proposta</a>
+        </div>
+      </section> -->
+
       <!-- Como funciona? section -->
       <section class="bg-blue-100">
         <div class="container mx-auto relative text-white">
@@ -924,9 +935,9 @@
             </div>
 
             <div class="text-white max-w-[507px]">
-              <h2 class="font-bold text-5xl leading-[56px] mb-2">Calcular valor imóvel online</h2>
+              <h2 class="font-bold text-5xl leading-[56px] mb-2">Quanto vale o seu imóvel?</h2>
               <p class="text-sm">
-                Ao receber a oferta, obtenha uma avaliação de imóvel que deseja comprar.
+                Faça já avaliação do seu imóvel de maneira gratuita em nossa calculadora online.
               </p>
             </div>
 
