--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
                     type="email"
                     name="email"
                     placeholder="Enter your email"
-                    class="input input-medium"
+                    class="input input-medium input-subscribe"
                   />
 
                   <button
