feat: added lines on the main banner for mortgage step 4

--- a/mortgage-4.html
+++ b/mortgage-4.html
@@ -237,29 +237,35 @@
     </header>
 
     <main class="overflow-x-hidden">
-      <!-- Mortgage 4 step -->
+      <!-- Mortgage step 4 -->
       <section class="relative bg-gradient-to-r from-blue-100 to-purple-500">
         <div
-          class="text-center text-white container mx-auto grid content-center h-screen border-l border-r border-l-gray-a200 border-r-gray-a200"
+          class="text-center text-white container mx-auto grid grid-cols-[1fr_100px_390px_100px_1fr] h-screen border-l border-r border-l-gray-a200 border-r-gray-a200"
         >
-          <h1 class="text-7xl font-secondary mb-4">Parabéns!</h1>
-          <p class="text-xl font-bold max-w-[697px] mb-8 justify-self-center">
-            Você deu um passo importante para a aprovação do seu financiamento imobiliário.
-          </p>
+          <div class="grid row-start-1 col-start-2 col-span-3 self-center">
+            <h1 class="text-7xl font-secondary mb-4">Parabéns!</h1>
+            <p class="text-xl font-bold max-w-[697px] mb-8 justify-self-center">
+              Você deu um passo importante para a aprovação do seu financiamento imobiliário.
+            </p>
 
-          <!-- TODO: replace by svg component -->
-          <img
-            src="/svg/parabens-star.svg"
-            alt="parabens star cartoon character"
-            class="mb-8 justify-self-center"
-          />
+            <!-- TODO: replace by svg component -->
+            <img
+              src="/svg/parabens-star.svg"
+              alt="parabens star cartoon character"
+              class="mb-8 justify-self-center"
+            />
 
-          <h2 class="font-bold text-xl mb-2">Quer comprar?</h2>
-          <p class="font-bold mb-8">Obtenha uma avaliação instantânea da propriedade</p>
+            <h2 class="font-bold text-xl mb-2">Quer comprar?</h2>
+            <p class="font-bold mb-8">Obtenha uma avaliação instantânea da propriedade</p>
 
-          <a href="#" class="btn text-purple-500 bg-white min-w-[294px] justify-self-center"
-            >Evaluate your property</a
-          >
+            <a href="#" class="btn text-purple-500 bg-white min-w-[294px] justify-self-center"
+              >Evaluate your property</a
+            >
+          </div>
+
+          <div
+            class="col-start-3 row-start-1 h-screen border-l border-r border-l-gray-a200 border-r-gray-a200"
+          ></div>
         </div>
 
         <div class="absolute bottom-0 w-full py-6 bg-white bg-opacity-90 backdrop-blur-sm">
@@ -267,9 +273,7 @@
             Falta pouco para você garantir sua proposta de financiamento completa!
           </p>
 
-          <div role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-            
-          </div>
+          <div role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </section>
 
@@ -800,7 +804,7 @@
           >
             <h2 class="uppercase text-7xl mb-2 lg:mb-4 font-secondary text-center">Newsletter</h2>
 
-            <p class="mb-6 lg:mb-8 text-center text-light-grey">
+            <p class="mb-6 lg:mb-8 text-center text-gray-50">
               Subscribe to the newsletter and receive information about promotions and new arrivals.
             </p>
 
@@ -947,7 +951,7 @@
 
               <div class="leading-4">
                 <h3 class="mb-2">Your City / Country</h3>
-                <p class="text-xs text-light-grey">
+                <p class="text-xs text-gray-50">
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.
                 </p>
               </div>
@@ -1103,7 +1107,7 @@
             <a href="#">Privacy Policy</a>
           </div>
 
-          <p class="text-light-grey text-right pb-8 lg:py-10 lg:pr-9">
+          <p class="text-gray-50 text-right pb-8 lg:py-10 lg:pr-9">
             &copy; AgentImovel 2024. All Rights Reserved.
           </p>
         </div>
