feat: updated mortgage-pages form layout and components

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                   Newsletter
                 </h2>
 
-                <p class="mb-6 lg:mb-8 text-center text-light-grey">
+                <p class="mb-6 lg:mb-8 text-center text-gray-50">
                   Subscribe to the newsletter and receive information about promotions and new
                   arrivals.
                 </p>
@@ -902,7 +902,7 @@
 
                   <div class="leading-4">
                     <h3 class="mb-2">Your City / Country</h3>
-                    <p class="text-xs text-light-grey">
+                    <p class="text-xs text-gray-50">
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.
                     </p>
                   </div>
@@ -1058,7 +1058,7 @@
                 <a href="#">Privacy Policy</a>
               </div>
 
-              <p class="text-light-grey text-right pb-8 lg:py-10 lg:pr-9">
+              <p class="text-gray-50 text-right pb-8 lg:py-10 lg:pr-9">
                 &copy; AgentImovel 2024. All Rights Reserved.
               </p>
             </div>
