--- a/mortgage.html
+++ b/mortgage.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Propdo</title>
+    <!-- Import style -->
+    <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
+    <!-- Import Vue 3 -->
+    <script src="//unpkg.com/vue@3"></script>
+    <!-- Import component library -->
+    <script src="//unpkg.com/element-plus"></script>
   </head>
   <body class="font-primary" id="app">
     <header>
@@ -246,12 +252,25 @@
         </h1>
 
         <div class="grid grid-cols-3">
-          <form class="flex flex-col gap-6 px-6 justify-self-center w-full">
-            <div>
-              <label for="" class="text-gray-400 flex mb-2"> Como vamos ajudar você?</label>
-
-              <input type="text" class="input input-medium w-full" placeholder="R$" />
-            </div>
+          <el-form label-position="left" class="flex flex-col gap-6 px-6 justify-self-center w-full">
+            <el-form-item label="Como vamos ajudar você?" class="flex-col mb-0">
+              <el-select
+                v-model="value"
+                placeholder="Pretendo comprar em até um mês"
+                style="
+                  --el-border-radius-base: 100px;
+                  --el-select-input-color: #868899;
+                  --el-text-color-placeholder: #868899;
+                "
+              >
+                <el-option
+                  v-for="item in options"
+                  :key="item.value"
+                  :label="item.label"
+                  :value="item.value"
+                />
+              </el-select>
+            </el-form-item>
 
             <div>
               <label for="" class="flex items-center gap-2 mb-2 text-gray-400">
@@ -273,7 +292,7 @@
                 Qual a sua renda?</label
               >
 
-              <input type="text" class="input input-medium w-full" placeholder="R$" />
+              <input type="text" class="input input-small w-full" placeholder="R$" />
             </div>
 
             <div class="w-full">
@@ -295,9 +314,9 @@
                 Valor de entrada</label
               >
 
-              <input type="text" class="input input-medium w-full" placeholder="R$" />
+              <input type="text" class="input input-small w-full" placeholder="R$" />
             </div>
-          </form>
+          </el-form>
 
           <article class="flex flex-col gap-24 items-center">
             <div class="text-center grid grid-rows-[300px]">
@@ -1426,7 +1445,7 @@
           >
             <h2 class="uppercase text-7xl mb-2 lg:mb-4 font-secondary text-center">Newsletter</h2>
 
-            <p class="mb-6 lg:mb-8 text-center text-light-grey">
+            <p class="mb-6 lg:mb-8 text-center text-gray-50">
               Subscribe to the newsletter and receive information about promotions and new arrivals.
             </p>
 
@@ -1573,7 +1592,7 @@
 
               <div class="leading-4">
                 <h3 class="mb-2">Your City / Country</h3>
-                <p class="text-xs text-light-grey">
+                <p class="text-xs text-gray-50">
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.
                 </p>
               </div>
@@ -1729,7 +1748,7 @@
             <a href="#">Privacy Policy</a>
           </div>
 
-          <p class="text-light-grey text-right pb-8 lg:py-10 lg:pr-9">
+          <p class="text-gray-50 text-right pb-8 lg:py-10 lg:pr-9">
             &copy; AgentImovel 2024. All Rights Reserved.
           </p>
         </div>
